tests/baselines/reference/operatorAddNullUndefined.errors.txt
operatorAddNullUndefined.ts(2,10): error TS18050: The value 'null' cannot be used here.
operatorAddNullUndefined.ts(2,17): error TS18050: The value 'null' cannot be used here.
operatorAddNullUndefined.ts(3,10): error TS18050: The value 'null' cannot be used here.
operatorAddNullUndefined.ts(3,17): error TS18050: The value 'undefined' cannot be used here.
operatorAddNullUndefined.ts(4,10): error TS18050: The value 'undefined' cannot be used here.
operatorAddNullUndefined.ts(4,22): error TS18050: The value 'null' cannot be used here.
operatorAddNullUndefined.ts(5,10): error TS18050: The value 'undefined' cannot be used here.
operatorAddNullUndefined.ts(5,22): error TS18050: The value 'undefined' cannot be used here.
operatorAddNullUndefined.ts(6,14): error TS18050: The value 'null' cannot be used here.
operatorAddNullUndefined.ts(7,14): error TS18050: The value 'undefined' cannot be used here.
operatorAddNullUndefined.ts(8,10): error TS18050: The value 'null' cannot be used here.
operatorAddNullUndefined.ts(9,10): error TS18050: The value 'undefined' cannot be used here.
operatorAddNullUndefined.ts(14,11): error TS18050: The value 'null' cannot be used here.
operatorAddNullUndefined.ts(15,11): error TS18050: The value 'undefined' cannot be used here.
operatorAddNullUndefined.ts(16,17): error TS18050: The value 'null' cannot be used here.
operatorAddNullUndefined.ts(17,17): error TS18050: The value 'undefined' cannot be used here.


==== operatorAddNullUndefined.ts (16 errors) ====
    enum E { x }
    var x1 = null + null;
             ~~~~
!!! error TS18050: The value 'null' cannot be used here.
                    ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var x2 = null + undefined;
             ~~~~
!!! error TS18050: The value 'null' cannot be used here.
                    ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var x3 = undefined + null;
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
                         ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var x4 = undefined + undefined;
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
                         ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var x5 = 1 + null;
                 ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var x6 = 1 + undefined;
                 ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var x7 = null + 1;
             ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var x8 = undefined + 1;
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var x9 = "test" + null;
    var x10 = "test" + undefined;
    var x11 = null + "test";
    var x12 = undefined + "test";
    var x13 = null + E.x
              ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var x14 = undefined + E.x
              ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var x15 = E.x + null
                    ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var x16 = E.x + undefined
                    ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.